# internal/api/gen.go
@@ -102,6 +102,9 @@ type TokenGetTokenJSONRequestBody TokenGetTokenJSONBody
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
+	// Logout
+	// (DELETE /)
+	Logout(ctx echo.Context) error
 	// Get all clients
 	// (GET /account/clients/)
 	ClientsListClients(ctx echo.Context, params ClientsListClientsParams) error
@@ -120,12 +123,12 @@ type ServerInterface interface {
 	// Authorization Request
 	// (POST /authorize)
 	PostAuthorize(ctx echo.Context) error
-	// Login
-	// (POST /login)
-	Login(ctx echo.Context) error
 	// Get me
 	// (GET /me)
 	Me(ctx echo.Context) error
+	// Login
+	// (POST /session)
+	Login(ctx echo.Context) error
 	// Signup
 	// (POST /signup)
 	Signup(ctx echo.Context) error
@@ -137,6 +140,15 @@ type ServerInterface interface {
 // ServerInterfaceWrapper converts echo contexts to parameters.
 type ServerInterfaceWrapper struct {
 	Handler ServerInterface
+}
+
+// Logout converts echo context to params.
+func (w *ServerInterfaceWrapper) Logout(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.Logout(ctx)
+	return err
 }
 
 // ClientsListClients converts echo context to params.
@@ -266,21 +278,21 @@ func (w *ServerInterfaceWrapper) PostAuthorize(ctx echo.Context) error {
 	return err
 }
 
-// Login converts echo context to params.
-func (w *ServerInterfaceWrapper) Login(ctx echo.Context) error {
-	var err error
-
-	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.Login(ctx)
-	return err
-}
-
 // Me converts echo context to params.
 func (w *ServerInterfaceWrapper) Me(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.Me(ctx)
+	return err
+}
+
+// Login converts echo context to params.
+func (w *ServerInterfaceWrapper) Login(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.Login(ctx)
 	return err
 }
 
@@ -330,14 +342,15 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
+	router.DELETE(baseURL+"/", wrapper.Logout)
 	router.GET(baseURL+"/account/clients/", wrapper.ClientsListClients)
 	router.POST(baseURL+"/account/clients/", wrapper.ClientsCreateClient)
 	router.DELETE(baseURL+"/account/clients/:id/:id", wrapper.ClientsDeleteClient)
 	router.POST(baseURL+"/account/clients/:id/:id", wrapper.ClientsUpdateClient)
 	router.GET(baseURL+"/authorize", wrapper.Authorize)
 	router.POST(baseURL+"/authorize", wrapper.PostAuthorize)
-	router.POST(baseURL+"/login", wrapper.Login)
 	router.GET(baseURL+"/me", wrapper.Me)
+	router.POST(baseURL+"/session", wrapper.Login)
 	router.POST(baseURL+"/signup", wrapper.Signup)
 	router.POST(baseURL+"/token/", wrapper.TokenGetToken)
 
